增加路由验证功能
