# docs/swagger.json
@@ -22,8 +22,14 @@
                     "管理员接口"
                 ],
                 "summary": "修改密码",
-                "operationId": "/admin/change_pwd",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "body",
                         "name": "data",
@@ -74,7 +80,15 @@
                     "管理员接口"
                 ],
                 "summary": "管理员信息",
-                "operationId": "/admin/info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success",
@@ -115,8 +129,14 @@
                     "管理员接口"
                 ],
                 "summary": "删除用户",
-                "operationId": "/admin/{id}",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Account ID",
@@ -160,7 +180,6 @@
                     "管理员接口"
                 ],
                 "summary": "管理员登录",
-                "operationId": "/admin_login/login",
                 "parameters": [
                     {
                         "description": "body",
@@ -207,7 +226,6 @@
                     "管理员接口"
                 ],
                 "summary": "管理员注册",
-                "operationId": "/admin_login/register",
                 "parameters": [
                     {
                         "description": "body",
@@ -259,8 +277,14 @@
                     "服务管理接口"
                 ],
                 "summary": "获取服务列表",
-                "operationId": "/service/list",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "关键词",
@@ -322,8 +346,14 @@
                     "服务管理接口"
                 ],
                 "summary": "添加HTTP服务",
-                "operationId": "/service/service_add_http",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "body",
                         "name": "data",
@@ -374,8 +404,14 @@
                     "服务管理接口"
                 ],
                 "summary": "修改HTTP服务",
-                "operationId": "/service/service_update_http",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "body",
                         "name": "data",
@@ -426,8 +462,14 @@
                     "服务管理接口"
                 ],
                 "summary": "获取服务信息",
-                "operationId": "/service/{id}",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ID",
@@ -474,8 +516,14 @@
                     "服务管理接口"
                 ],
                 "summary": "删除服务",
-                "operationId": "/service/{id}",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ID",
@@ -767,6 +815,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
